# SegWithU

./: .gitignore  README.md  pyproject.toml
experiments/: __init__.py  vars.py
experiments/backbone/: __init__.py  backbone.py  eval_backbone.py  infer_backbone.py  train_backbone.py
experiments/swu/: __init__.py  infer_swu.py  train_swu.py
home/: index.html  wrangler.jsonc
segwithu/: __init__.py  crit.py  predictor.py  trainer.py
segwithu/net/: __init__.py  blocks.py  swu.py
